feature:atualização no css e html

--- a/index.html
+++ b/index.html
@@ -44,8 +44,22 @@
                         </p>
                     </section>
                 </div>
-            </section>
-        
+                <section class="experience gap">
+                        <div class="right-title">
+                        <div class="experience-contents">
+                                <div class="exp-left">
+                                    <p class="exp-company-name">Empresa 01</p>
+                                    <p class="exp-time-period">2021-present</p>
+                                </div>
+                                <div class="exp-right">
+                                    <p class="exp-position">funcionaria</p>
+                                    <p class="exp-desc">atividades gerais</p>  
+                                </div>
+                            </div>
+
+                        </div>
+                </section>
+            </section> 
     </main>
 </body>
 </html>
