--- a/index.html
+++ b/index.html
@@ -59,7 +59,22 @@
 
                         </div>
                 </section>
+                <section class="education gap">
+                    <div class="right-title">Formação Academica</div>
+                    <div class="education-contents">
+                     <div class="education-left">
+                        <p class="education-school-name">Ifes</p>
+                        <p class="education-time-period">2019-2023</p>
+                     </div>
+                        <div class="education-right">
+                        <p class="education-subject">Engenharia elétrica</p>
+                        <p class="education-tecnico">técnico em automação industrial</p>
+                        <p class="education-tecnico">técnico em automação industrial</p>
+                        </div>
+                    </div>
+                </section>
             </section> 
+            
     </main>
 </body>
 </html>
