feature: att html e css

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                         </div>
                 </section>
                 <section class="education gap">
-                    <div class="education-title">Formação Academica</div>
+                    <div class="right-title">Formação Academica</div>
                     <div class="education-contents">
                         <div class="education-left">
                             <p class="education-school-name">Ifes-campus Guarapari</p>
@@ -74,9 +74,20 @@
                             <p class="education-subject">Técnico em Automação Industrial </p>
                             <p class="education-desc">Curso técnico integrado com o ensino médio</p>
                         </div>
-                    </div>             
+                    </div>
                 </section>
-            </section> 
+        <section class="awards gap">
+        <div class="right-title">Cursos</div>
+        <div class="awards-contents">
+            <div class="awards-left">
+            <p class="awards-time-period">06 de abril</p>
+        </div>
+            <div class="awards-right">
+                <p class="awards-name">Curso de manutanção de computador</p>
+                <p class="awards-desc">aprendi montagem, limpeza e consertos em hadware de computador</p>
+            </div>
+        </section> 
+    </section> 
     </main>
 </body>
 </html>
